--- a/WarhammerGameManager.Frontend/Properties/launchSettings.json
+++ b/WarhammerGameManager.Frontend/Properties/launchSettings.json
@@ -1,18 +1,19 @@
 ﻿{
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    "windowsAuthentication": true,
+    "anonymousAuthentication": false,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52663",
+      "applicationUrl": "http://localhost:33900",
       "sslPort": 0
     }
   },
   "profiles": {
-    "WarhammerGameManager.Frontend": {
+    "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5176",
+      "applicationUrl": "http://localhost:5085",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
