--- a/WarhammerGameManager.Frontend/WarhammerGameManager.Frontend.csproj
+++ b/WarhammerGameManager.Frontend/WarhammerGameManager.Frontend.csproj
@@ -1,9 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Negotiate" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WarhammerGameManager.Entities\WarhammerGameManager.Entities.csproj" />
+    <ProjectReference Include="..\WarhammerGameManager.Logic\WarhammerGameManager.Logic.csproj" />
+  </ItemGroup>
 
 </Project>
