wireup to serilog and db logging

--- a/WarhammerGameManager.Frontend/appsettings.json
+++ b/WarhammerGameManager.Frontend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "WHNCon": "#{WarhammerNarrativeConString}#"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
