Initial implementation of player viewer

--- a/WarhammerGameManager.Frontend/WarhammerGameManager.Frontend.csproj
+++ b/WarhammerGameManager.Frontend/WarhammerGameManager.Frontend.csproj
@@ -26,6 +26,9 @@
     <Content Update="wwwroot\css\site.css">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Update="wwwroot\js\PlayerEditorScripts.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Update="wwwroot\js\site.js">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
