adding identity items

--- a/WarhammerGameManager.Frontend/appsettings.json
+++ b/WarhammerGameManager.Frontend/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "WHNCon": "#{WarhammerNarrativeConString}#"
+    "WHNCon": "#{WarhammerNarrativeConString}#",
+    "AuthCon": "#{AuthPipelineConString}#"
   },
   "Logging": {
     "LogLevel": {
