--- a/WarhammerGameManager.Entities/WarhammerGameManager.Entities.csproj
+++ b/WarhammerGameManager.Entities/WarhammerGameManager.Entities.csproj
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="EntityFramework\IdentityHub\TableModels\" />
     <Folder Include="EntityFramework\WarhammerNarrative\Migrations\" />
   </ItemGroup>
 
