Adding auth into project

--- a/WarhammerGameManager.Frontend/appsettings.json
+++ b/WarhammerGameManager.Frontend/appsettings.json
@@ -3,6 +3,11 @@
     "WHNCon": "#{WarhammerNarrativeConString}#",
     "AuthCon": "#{AuthPipelineConString}#"
   },
+  "EmailSettings": {
+    "SenderAddress": "#{EmailSender}#",
+    "SenderPassword": "#{SenderPassword}#",
+    "SMTPHost": "#{SMTPServerAddress}#"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
